--- a/index.html
+++ b/index.html
@@ -1088,9 +1088,7 @@ body {
             </div>
         </div>
 
-         <div class="about-image" style="padding: 0; background: none;">
-                <img src="about.jpg" alt="About Sudama Solutions" style="width: 100%; height: 100%; object-fit: cover; border-radius: 10px;">
-            </div>
+         
     </section>
 
 
@@ -1279,8 +1277,8 @@ body {
         <div class="container">
             <div class="footer-content">
                 <div class="footer-about">
-                    <h3>Sudama Solutions</h3>
-                    <p>Providing innovative technology solutions for the healthcare industry since 2010. We're committed to enhancing patient care through digital transformation.</p>
+                    <h3>SudamaSolutions Technologies & Health Care Pvt Ltd</h3>
+                    <p>Providing innovative technology solutions for the healthcare industry since 2025. We're committed to enhancing patient care through digital transformation.</p>
                     <div class="social-links">
                         
                         <a href="https://www.instagram.com/sudamasolutions_technologies?igsh=MTJrMXZqYWk3djRlZw%3D%3D&utm_source=qr"><i class="fab fa-instagram"></i></a>
